fixed FileResource#exists bugs